--- a/NewFolder1/WebApplication1/Properties/launchSettings.json
+++ b/NewFolder1/WebApplication1/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:26159",
-      "sslPort": 44338
+      "applicationUrl": "http://localhost:28096",
+      "sslPort": 44341
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Store.Web": {
+    "WebApplication1": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
