--- a/infrastructure/Store.Memory/Store.Memory.csproj
+++ b/infrastructure/Store.Memory/Store.Memory.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\domain\Store\Store.csproj" />
+    <ProjectReference Include="..\..\domain\Store\Store.csproj" />
   </ItemGroup>
 
 </Project>
