--- a/presentation/Store.Web/Store.Web.csproj
+++ b/presentation/Store.Web/Store.Web.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\domain\Store\Store.csproj" />
-    <ProjectReference Include="..\..\Store.Memory\Store.Memory.csproj" />
+    <ProjectReference Include="..\..\infrastructure\Store.Memory\Store.Memory.csproj" />
   </ItemGroup>
 
   <ItemGroup>
